[project]
name = "callmemaybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llm-sdk",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]

[tool.mypy]
exclude = "^llm_sdk/"

